--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#DB0000</color>
+    <color name="yellow">#E4B600</color>
+    <color name="orange">#F78B2D</color>
+    <color name="green">#7AA802</color>
+    <color name="lightYellow">#C7DB00</color>
+
+
 </resources>
