--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="mediumSize">12dp</dimen>
+    <dimen name="bigSize">25dp</dimen>
 </resources>
