--- a/app/src/main/res/layout/activity_creer_ma_table_step4.xml
+++ b/app/src/main/res/layout/activity_creer_ma_table_step4.xml
@@ -1,9 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cuisinier.creerMaTable.creerMaTableStep4">
+    tools:context=".cuisinier.creerMaTable.creerMaTableStep4"
+    android:orientation="vertical"
+    android:background="@drawable/background"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.example.latabledesgourmands.fragments.bandeauHaut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_bandeau_haut" />
+        <TextView
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:text="@string/MaTable"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:layout_margin="5dp"
+            android:gravity="center_horizontal"
+            android:text="RECAPITULATIF DE MA TABLE PLACERHOLDER"></TextView>
+
+        <Button
+            android:id="@+id/nextStepButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/mediumSize"
+            android:layout_margin="5dp"
+            android:text="@string/creer_ma_table"
+            android:onClick="onClickCreateATable"
+            ></Button>
+        <fragment
+            android:id="@+id/fragmentBas"
+            android:name="com.example.latabledesgourmands.fragments.bandeauBasCreationTDG"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_bandeau_haut" />
+    </LinearLayout>
+</RelativeLayout>
