--- a/app/src/main/res/layout/fragment_recycler_view_menu_item.xml
+++ b/app/src/main/res/layout/fragment_recycler_view_menu_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/nomEntree"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/indie_flower"
@@ -14,6 +15,7 @@
         android:text="MENU PLACEHOLDER ENTREE">
     </TextView>
     <TextView
+        android:id="@+id/nomPlat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/indie_flower"
@@ -24,6 +26,7 @@
 
     </TextView>
     <TextView
+        android:id="@+id/nomDessert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/indie_flower"
