--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/menuRecyclerViewViewHolderBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/yellow"
-    >
+    android:orientation="vertical">
     <TextView
         android:id="@+id/nomEntree"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
+        android:background="@color/white"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
         android:text="MENU PLACEHOLDER ENTREE">
@@ -23,6 +21,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
+        android:background="@color/white"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
         android:text="MENU PLACEHOLDER PLAT">
@@ -34,6 +33,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
+        android:background="@color/white"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
         android:text="MENU PLACEHOLDER DESSERT">
