--- a/app/src/main/res/layout/fragment_recycler_view_menu_item.xml
+++ b/app/src/main/res/layout/fragment_recycler_view_menu_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/yellow"
+    android:layout_margin="@dimen/mediumSize"
     >
     <TextView
         android:id="@+id/nomEntree"
